[package]
name = "moiradb"
version = "0.3.0-dev"
authors = ["Dave Hrycyszyn"]
edition = "2018"
license = "Apache-2.0"
description = "An experimental deterministic database"
repository = "https://github.com/futurechimp/moiradb"
keywords = ["deterministic","database","blockchain"]
categories = ["database-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
bincode = "1.3"
futures = "0.3.8"
num_cpus = "1.13.0"
rand = "0.7.3"
rocksdb = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.24", features = [ "full" ] }

[dev-dependencies]
criterion = "0.3.3"
moiradb-command-examples = { path = "../moiradb-command-examples" }

[[bench]]
name = "singlethread"
harness = false

[[bench]]
name = "multithread"
harness = false
