[package]
name = "moiradb-command-examples"
version = "0.1.0"
authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moiradb = { path = "../lib"}
async-trait = "0.1.82"
bincode = "1.3"
futures = "0.3.30"
num_cpus = "1.16.0"
rand = "0.8.5"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = [ "full" ] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "singlethread"
harness = false

[[bench]]
name = "multithread"
harness = false
